--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevOps Portfolio</title>
+    <meta name="description" content="Anand Gupta | DevOps Engineer | Kubernetes | Azure | Terraform | CI/CD Portfolio" />
+    <meta name="author" content="Anand Gupta" />
+    <meta name="keywords" content="DevOps, Azure, Kubernetes, Terraform, Docker, React, CI/CD, Portfolio" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <title>Anand Gupta | DevOps Portfolio</title>
   </head>
-  <body>
+  <body class="bg-slate-900 text-white">
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
